overflow problem solved

--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ body {
     transition: all .3s ease;
     overflow-x: hidden;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
 
 .container {
-    width: 80%;
+    width: 85%;
     margin: auto;
     z-index: 1;
 }
@@ -186,7 +187,7 @@ nav .nav_links li a:hover::before {
 }
 
 .gif p {
-    font-size: 200px;
+    font-size: clamp(80px, 12vw, 200px);
     color: transparent;
     -webkit-text-stroke: 1px var(--border);
     /* font-family: "Clicker Script", cursive; */
@@ -222,7 +223,8 @@ nav .nav_links li a:hover::before {
     font-size: 50px;
     transition: all .5s ease;
 }
-a{
+
+a {
     color: inherit;
 }
 
@@ -240,7 +242,7 @@ a{
 }
 
 .hero_section .hero_left .occupation {
-    font-size: 40px;
+    font-size: 52px;
     font-weight: bolder;
     padding: 10px 0;
     background: var(--text-gradient);
@@ -336,23 +338,26 @@ a{
 
 /* ********** PROJECT SECTION CSS STARTS ************ */
 
-.project_section{
+.project_section {
     padding: 40px 0;
     background: linear-gradient(to bottom, rgba(42, 20, 84, 0) 0%, rgba(136, 80, 247, 0.1));
 }
-.project_section img{
+
+.project_section img {
     width: 100%;
     /* border-radius: 20px; */
     aspect-ratio: 3/2;
     object-fit: cover;
 }
-.project_section .project_container{
+
+.project_section .project_container {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px, 400px));
+    grid-template-columns: repeat(4, 1fr);
     gap: 32px;
     justify-content: center;
 }
-.product_list_parent{
+
+.product_list_parent {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -366,17 +371,20 @@ a{
     /* height: 300px;
     width: 300px; */
 }
-.product_list_parent > p{
+
+.product_list_parent>p {
     font-size: 20px;
     color: var(--text-color);
     font-weight: bold;
     /* padding-bottom: 10px; */
     padding: 10px;
 }
-.product_list_parent small{
+
+.product_list_parent small {
     padding-bottom: 10px;
 }
-.project_section .project_list{
+
+.project_section .project_list {
     background: var(--bg-primary);
     padding: 5px;
     /* border-radius: 20px; */
@@ -386,7 +394,8 @@ a{
     position: relative;
     overflow: hidden;
 }
-.product_content{
+
+.product_content {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -399,7 +408,8 @@ a{
     color: white;
     transition: all .5s ease-in-out;
 }
-.code_btn{
+
+.code_btn {
     position: absolute;
     bottom: -30%;
     left: 50%;
@@ -407,7 +417,8 @@ a{
     width: 100%;
     transition: all .5s ease-in-out;
 }
-.code_btn button{
+
+.code_btn button {
     padding: 8px 20px;
     border-radius: 20px;
     border: none;
@@ -415,34 +426,40 @@ a{
     text-transform: capitalize;
     cursor: pointer;
 }
-.code_btn button a{
+
+.code_btn button a {
     color: var(--text-color);
     font-size: 14px;
 }
-.language_used{
+
+.language_used {
     padding: 20px 0;
     display: flex;
     gap: 10px;
     align-items: center;
     justify-content: center;
 }
-.language_used span{
+
+.language_used span {
     /* background: var(--background-color); */
     padding: 8px;
     font-size: 10px;
     border: 2px solid rgba(20, 12, 28, 0.3);
     border-radius: 20px;
 }
+
 /* .project_section .project_list:hover{
     border: 2px solid var(--border);;
 } */
-.project_section .product_list_parent:hover .code_btn{
+.project_section .product_list_parent:hover .code_btn {
     bottom: 10%;
 }
-.project_section .product_list_parent:hover .product_content{
+
+.project_section .product_list_parent:hover .product_content {
     bottom: 0%;
 }
-.project_section .project_heading{
+
+.project_section .project_heading {
     font-size: 70px;
     font-weight: bolder;
     font-family: "Chakra Petch", sans-serif;
@@ -477,10 +494,12 @@ a{
     /* gap: 80px; */
     align-items: center;
 }
-.contact_section .right_content{
+
+.contact_section .right_content {
     justify-self: end;
 }
-.contact_section .contact_heading{
+
+.contact_section .contact_heading {
     font-size: 80px;
     font-weight: bolder;
     background: var(--text-gradient);
@@ -697,6 +716,7 @@ footer {
 
     }
 }
+
 .self_description {
     display: flex;
     flex-direction: column;
@@ -705,6 +725,15 @@ footer {
 }
 
 /* ************** Media queries for RESPONSIVE DESIGN ***********  */
+@media (max-width: 1200px) {
+    .project_section .project_container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 32px;
+        justify-content: center;
+    }
+}
+
 @media (max-width: 1025px) {
     .hero_section {
         padding: 75px 0;
@@ -773,11 +802,13 @@ footer {
         /* box-shadow: 3px 5px 10px 1px rgba(136, 80, 247, 0.4); */
         border: 1px solid var(--border);
     }
+
     /* ************ PROJECT SECTION MEDIA QUERIES *********  */
-    .product_content{
+    .product_content {
         bottom: 0%;
     }
-    .code_btn{
+
+    .code_btn {
         bottom: 10%;
     }
 
@@ -790,7 +821,8 @@ footer {
         gap: 80px;
         align-items: center;
     }
-    .contact_section .right_content{
+
+    .contact_section .right_content {
         justify-self: auto;
     }
 
@@ -798,6 +830,16 @@ footer {
     .footer_content {
         flex-direction: column;
         gap: 20px;
+    }
+}
+
+@media (max-width: 992px) {
+    .container {
+        width: 90%;
+    }
+
+    .project_section .project_container {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -835,8 +877,9 @@ footer {
     .project_start p:nth-child(1) {
         font-size: 12px;
     }
+
     /* ********** PROJECT SECTION ****  */
-    .project_section .project_heading{
+    .project_section .project_heading {
         font-size: 50px;
     }
 
@@ -850,20 +893,24 @@ footer {
     .data_input input {
         width: 100%;
     }
-    .skill_heading p{
+
+    .skill_heading p {
         font-size: 50px;
     }
-    .about_content .resume_heading{
+
+    .about_content .resume_heading {
         font-size: 50px;
     }
 
 }
 
-@media (max-width: 550px) {
-    .container {
-        width: 90%;
-    }
 
+
+@media (max-width: 550px) {
+
+.project_section .project_container {
+        grid-template-columns:  1fr;
+    }
     .hero_section {
         gap: 0px;
         padding: 40px 20px;
@@ -917,19 +964,22 @@ footer {
         align-items: start;
         font-size: 14px;
     }
+
     /* ***** CONTACT MEDIA QUERY ****  */
-    .contact_section .contact_heading{
+    .contact_section .contact_heading {
         font-size: 50px;
         margin-bottom: 20px;
     }
-    .form_bg .hero_heading{
+
+    .form_bg .hero_heading {
         font-size: 35px;
     }
+
     .form_bg p {
         font-size: 15px;
     }
 
-    .project_section .project_heading{
+    .project_section .project_heading {
         font-size: 40px;
     }
 
